src/eval/snapshots/monkey_language_server__eval__test__array_syntax_err.snap
---
source: src/eval/test.rs
description: "let x = [1, \"foo, true];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    scope_range: "(0,0)->(0,24)",
    parent_range: None,
    children: [],
}

========================

[
    "SyntaxError: Expected ']' not found. (0,12)->(0,24)",
]
