src/eval/snapshots/monkey_language_server__eval__test__bad_minus_prefix_1.snap
---
source: src/eval/test.rs
description: "-true"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Warning(UnusedExpression, (0,0)->(0,1)),
    Error(BadPrefixType("bool"), (0,1)->(0,5)),
]
