src/eval/snapshots/monkey_language_server__eval__test__bad_minus_prefix_2.snap
---
source: src/eval/test.rs
description: "let x = -\"foo\";"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("x", Unknown, (0,4)->(0,5), (0,0)->(0,15)),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,15)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: bad operand type for unary +: 'str'. (0,9)->(0,14)",
]
