src/eval/snapshots/monkey_language_server__eval__test__bad_token.snap
---
source: src/eval/test.rs
description: "@"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    outer: None,
    inner: [],
}

========================

[
    Error(UnexpectedToken("@"), (0,0)->(0,1)),
]
