src/eval/snapshots/monkey_language_server__eval__test__basic_array.snap
---
source: src/eval/test.rs
description: "let x = [1, \"foo\", true];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Array, (0,0)->(0,25)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,25)",
    parent_range: None,
    children: [],
}

========================

[]
