src/eval/snapshots/monkey_language_server__eval__test__basic_hash.snap
---
source: src/eval/test.rs
description: "let x = {1: \"foo\", \"a\": 2};"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Hash, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("x", "(0,4)->(0,5)"),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[]
