src/eval/snapshots/monkey_language_server__eval__test__basic_hash_index.snap
---
source: src/eval/test.rs
description: "let x = {1: \"foo\", \"a\": 2}[1];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Unknown, (0,0)->(0,30)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,30)",
    parent_range: None,
    children: [],
}

========================

[]
