src/eval/snapshots/monkey_language_server__eval__test__basic_string_index.snap
---
source: src/eval/test.rs
description: "let x = \"foo\"[0];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,17)",
    parent_range: None,
    children: [],
}

========================

[]
