src/eval/snapshots/monkey_language_server__eval__test__bool_add.snap
---
source: src/eval/test.rs
description: let x = true + true;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Spanned(Unknown, x, (0,4)->(0,5)),
    ],
    outer: None,
    inner: [],
}

========================

[
    Error(UnknownOperator("bool", "bool", "+"), (0,13)->(0,14)),
]
