src/eval/snapshots/monkey_language_server__eval__test__bool_bang.snap
---
source: src/eval/test.rs
description: let x = true ! true;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    scope_range: "(0,0)->(0,20)",
    parent_range: None,
    children: [],
}

========================

[
    Error(ExpectedTokenNotFound(";"), (0,13)->(0,14)),
]
